@@ -1,4 +1,5 @@
 aclocal.m4
+autom4te.cache
 configure
 config.log
 config.h
