@@ -1,3 +1,8 @@
+2002-11-27  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
+
+	* Documentation/Makefile.am: New.  Build manual using
+	"make Display.ps".
+
 2001-08-16  Steve ROBBINS  <stever@bic.mni.mcgill.ca>
 
 	* configure.in: Bump version to 1.3.6.
